# color-gen

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
example_output/: coloors_output.rs  coolors_output.rs
examples/: coloors.rs  coolors.rs  example.json  readme.rs
src/: ir.rs  lib.rs  main.rs  tailwind.rs
tests/: allowed.rs
