[package]
name = "color-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
fnv = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.94"
prettyplease = "0.2.32"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_color"] }
